--- a/Styles/MainStyles.css
+++ b/Styles/MainStyles.css
@@ -1,3 +1,80 @@
 
 /*/////////////////////////					Main Styles                   				//////////////////////*/
+/*/////////////////////////					Content Block                   				//////////////////////*/
+.MainBlock {
+	box-sizing: border-box;
+	margin: 0 auto;
+	width: 100%;
+	border-radius: 10px;
+	min-height: 1px;
+	background-color: #eaeaea;
 
+}
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*/////////////////////////////////////			Navigation Text         /////////////////////////////////////////*/
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+.MainBlock .navigation_block_characters {
+	border: 5px solid #000;
+	border-radius: 10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-family: Arial;
+	width: 100%;
+	height: 200px;
+	text-align: center;
+	font-size: 100px;
+	font-weight: bold;
+}
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*/////////////////////////////////////			Navigation Block         /////////////////////////////////////////*/
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+.MainBlock .navigation_block {
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+}
+
+.MainBlock .navigation_block .nav_block {
+	background-color:rgba(255, 255, 255, 0);
+	width: 33%;
+	height: 500px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	text-align: center;
+	font-size: 45px;
+	overflow: hidden;
+	z-index: 1;
+
+}
+
+.MainBlock .navigation_block .nav_block h2 {
+	width: 100%;
+	font-family: 'Bungee', cursive;
+}
+
+.MainBlock .navigation_block .nav_block img {
+	width: 270px;
+	height: 320px;
+	border: 5px solid #000;
+	border-radius: 20%;
+	overflow: hidden;
+	transition: 0.3s;
+	z-index: 1;
+}
+
+.MainBlock .navigation_block .nav_block img:hover {
+	transition: 0.3s;
+	width: 290px;
+	height: 340px;
+	border: 5px solid #9cfca2;
+	box-shadow: 20px 10px 10px rgba(0,0,0,0.4);
+	z-index: 2;
+}
+
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
