Added more characters and game window

--- a/Styles/MainStyles.css
+++ b/Styles/MainStyles.css
@@ -7,14 +7,11 @@
 	width: 100%;
 	border-radius: 10px;
 	min-height: 1px;
-	background-color: #eaeaea;
-
 }
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 /*/////////////////////////////////////			Navigation Text         /////////////////////////////////////////*/
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
-.MainBlock .navigation_block_characters {
-	border: 5px solid #000;
+.MainBlock .navigation_block .navigation_block_characters {
 	border-radius: 10px;
 	display: flex;
 	justify-content: center;
@@ -30,14 +27,21 @@
 /*/////////////////////////////////////			Navigation Block         /////////////////////////////////////////*/
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 .MainBlock .navigation_block {
-	width: 100%;
+	width: 98%;
+	background-image: url(../Images/Nav_menu/Nav_background.jpg);
+	background-repeat: repeat;
+	border: 10px solid #000;
+	/* ////////////////////////   Обводка букв    ////////////////////////*/
+	text-shadow: #000 3px 3px 0, #000 -3px -3px 0, 
+                 #000 -3px 3px 0, #000 3px -3px 0;
+    /*////////////////////////////////////////////////////////////////////*/
+	color: #fff;
 	display: flex;
 	justify-content: space-around;
 	flex-wrap: wrap;
 }
 
 .MainBlock .navigation_block .nav_block {
-	background-color:rgba(255, 255, 255, 0);
 	width: 33%;
 	height: 500px;
 	display: flex;
@@ -55,7 +59,9 @@
 	width: 100%;
 	font-family: 'Bungee', cursive;
 }
-
+.MainBlock .navigation_block .nav_block a{
+	border-radius: 20%;
+}
 .MainBlock .navigation_block .nav_block img {
 	width: 270px;
 	height: 320px;
@@ -70,7 +76,7 @@
 	transition: 0.3s;
 	width: 290px;
 	height: 340px;
-	border: 5px solid #9cfca2;
+	border: 5px solid #fff;
 	box-shadow: 20px 10px 10px rgba(0,0,0,0.4);
 	z-index: 2;
 }
@@ -78,3 +84,28 @@
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+
+
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*/////////////////////////////////////			Game Block         ///////////////////////////////////////////////*/
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+
+.Main_Game_Block {
+	padding: 5%;
+	background-color: #fff;
+}
+
+
+
+
+
+
+
+
