--- a/Styles/Game.css
+++ b/Styles/Game.css
@@ -54,7 +54,7 @@
 }
 .Game_block .Game_links .NoteBook_Jerry:hover img{
 	transition: 0.8s;
-	margin-bottom: 150%;
+	margin-bottom: 70%;
 }
 /*///////////////////////////////////////////////////////////////*/
 /*//////////////////Расположение оружия Рика/////////////////////*/
@@ -72,7 +72,7 @@
 }
 .Game_block .Game_links .Gun_crashed:hover img{
 	transition: 0.6s;
-	margin-bottom: 150%;
+	margin-bottom: 100%;
 }
 /*///////////////////////////////////////////////////////////////*/
 /*////////////////////Расположение напитка///////////////////////*/
@@ -89,6 +89,24 @@
 	transition: 0.3s;
 }
 .Game_block .Game_links .Drink_Morty:hover img{
+	transition: 0.3s;
+	margin-bottom: 150%;
+}
+/*///////////////////////////////////////////////////////////////*/
+/*////////////////////Расположение плумбуса///////////////////////*/
+/*///////////////////////////////////////////////////////////////*/
+.Game_block .Game_links .Plumbus {
+	position: absolute;
+	width: 2%;
+    right: 39%;
+    bottom: 47.5%;
+}
+.Game_block .Game_links .Plumbus img {
+	width: 100%;
+	height: auto;
+	transition: 0.3s;
+}
+.Game_block .Game_links .Plumbus:hover img{
 	transition: 0.3s;
 	margin-bottom: 150%;
 }
