--- a/Styles/MainStyles.css
+++ b/Styles/MainStyles.css
@@ -99,7 +99,9 @@
 
 .Main_Game_Block {
 	padding: 5%;
-	background-color: #fff;
+	background-image: url(../Images/Game/backstage.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 
