--- a/Game_pages/Styles/Styles.css
+++ b/Game_pages/Styles/Styles.css
@@ -1,10 +1,10 @@
 #pickle {
 	background-image: url(../Images/BG/658977.png);
-	background-size: auto 50%; 
+	background-size: 33%; 
 }
 #Gun {
 	background-image: url(../Images/BG/812062.png);
-	background-size: auto 50%; 
+	background-size: auto auto; 
 }
 #Plumbus {
 	background-image: url(../Images/BG/876589.jpg);
@@ -12,11 +12,11 @@
 }
 #Drink {
 	background-image: url(../Images/BG/876590.png);
-	background-size: auto 50%; 
+	background-size: cover; 
 }
 #Notebook {
 	background-image: url(../Images/BG/924300.png);
-	background-size: auto 50%; 
+	background-size: cover;
 }
 
 
@@ -31,4 +31,59 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+#pickle .Text {
+	padding-top: 100px;
+	color: #667b27;
+	text-align: center;
+}
+#pickle .Text p{
+	font-size: 20px;
+	font-weight: bold;
+}
+
+#Plumbus .Text p {
+	width: 80%;
+	margin: 0 auto;
+	padding-top: 150px;
+	color: #fff;
+	text-align: center;
+	font-size: 30px;
+	font-weight: bold;
+}
+
+#Gun .Text {
+	margin: 0 auto;
+	width: 70%;
+	color: #fff;
+	font-weight: bold;
+	font-size: 24px;
+}
+#Gun .Text h1{
+	text-align: center;
+}
+
+#Notebook .Text {
+	margin: 0 auto;
+	width: 70%;
+	color: #fff;
+	font-weight: bold;
+	font-size: 24px;
+	text-align: center;
+}
+#Notebook .Text h1{
+	text-align: center;
+}
+
+#Drink .Text {
+	margin-left: 170px;
+	width: 60%;
+	color: #fff;
+	font-weight: bold;
+	font-size: 24px;
+	
+}
+#Drink .Text h1{
+	text-align: center;
 }
